[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
js-sys = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde-json-wasm = "0.3.1"
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize]}
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.20"